[package]
name = "hlj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
nacos-sdk = { version = "0.3", features = ["async"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2.4"
task-local-extensions = "0.1.4"
tokio = { version = "1", features = ["full"] }
