[package]
name = "hlj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
chrono-tz = "0.8.6"
clap = { version = "4.5.1", features = ["derive"] }
nacos-sdk = { version = "0.3", features = ["async"] }
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
task-local-extensions = "0.1.4"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["time"] }
time = { version = "0.3", features = ["macros"] }
local-ip-address = "0.6.1"
